--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ pre-commit = "~=2.6.0"
 
 [packages]
 discord-py = "~=1.3.4"
+coloredlogs = "~=14.0"
+colorama = {version = "~=0.4.3",sys_platform = "== 'win32'"}
 
 [requires]
 python_version = "3.8"
@@ -16,4 +18,4 @@ python_version = "3.8"
 [scripts]
 start = "python -m snek"
 lint = "python -m flake8"
-precommit = "python -m pre-commit install"
+precommit = "pre-commit install"
