--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,6 @@ services:
       - ./:/bot/:ro
     tty: true
     environment:
-      BOT_TOKEN: ${BOT_TOKEN}
+      SNEK_BOT_TOKEN: ${SNEK_BOT_TOKEN}
       SNEK_API_TOKEN: ${SNEK_API_TOKEN}
       SNEK_LOG_LEVEL: ${SNEK_LOG_LEVEL}
