--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pre-commit = "~=2.6.0"
 discord-py = "~=1.3.4"
 coloredlogs = "~=14.0"
 colorama = {version = "~=0.4.3",sys_platform = "== 'win32'"}
+fuzzywuzzy = "0.18.0"
 
 [requires]
 python_version = "3.8"
