--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ discord-py = "~=1.3.4"
 coloredlogs = "~=14.0"
 colorama = {version = "~=0.4.3",sys_platform = "== 'win32'"}
 fuzzywuzzy = "0.18.0"
+humanize = "*"
 
 [requires]
 python_version = "3.8"
